# diffusion_policy_following

./: README.md  github_command.md
demonstration_dataset/ros2_ws/src/dataset_collect_packages/aloha_bag_recorder/: README.md  package.xml  setup.cfg  setup.py
demonstration_dataset/ros2_ws/src/dataset_collect_packages/aloha_bag_recorder/aloha_bag_recorder/: bag_to_video.py  bag_writer.py  dp_recorder_node.py  dp_topics.py  recorder_node.py  topics.py
demonstration_dataset/ros2_ws/src/dataset_collect_packages/aloha_bag_recorder/config/: recorder.yaml
demonstration_dataset/ros2_ws/src/dataset_collect_packages/aloha_bag_recorder/launch/: record.launch.py
demonstration_dataset/ros2_ws/src/dataset_collect_packages/dp_arm_bridge/: package.xml  setup.cfg  setup.py
demonstration_dataset/ros2_ws/src/dataset_collect_packages/dp_arm_bridge/config/: arms.yaml
demonstration_dataset/ros2_ws/src/dataset_collect_packages/dp_arm_bridge/dp_arm_bridge/: arm_bridge_node.py  dp_eef_bridge_node.py
demonstration_dataset/ros2_ws/src/dataset_collect_packages/dp_arm_bridge/launch/: arm_bridge.launch.py  collect.launch.py
demonstration_dataset/ros2_ws/src/dataset_collect_packages/dp_camera/: package.xml  setup.cfg  setup.py
demonstration_dataset/ros2_ws/src/dataset_collect_packages/dp_camera/config/: cameras.yaml
demonstration_dataset/ros2_ws/src/dataset_collect_packages/dp_camera/dp_camera/: _dino.py  camera_bridge_node.py  keypoint_node.py
demonstration_dataset/scripts/: rosbag_to_bimanual_dp.py
(+2 files in other folders)
